--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -6,8 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" routerLink="/CrearUsuarios">Features</a>
+        <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
+        <a class="nav-link" routerLink="/CrearUsuarios">Crear Usuario</a>
       </div>
     </div>
   </div>
