--- a/src/app/crear-usuario/crear-usuario.component.html
+++ b/src/app/crear-usuario/crear-usuario.component.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="alert alert-danger mt-1" [hidden]="identi.valid || identi.pristine">
-            La identificacion debe tener 10 digitos
+            La identificacion debe tener 10 digitos. Debe incluir sólo números
         </div>
 
         <div class="mb-3">
